Sprint 2: Implement HATEOAS Level 3 maturity with hypermedia links
- Add spring-boot-starter-hateoas dependency
- Update all controllers to return EntityModel/CollectionModel with self, collection, and related links
- Update README.md with evolution from Sprint 1 to Sprint 2
- Add TODO.md for tracking tasks
- API now compliant with REST Maturity Level 3 (Hypermedia Controls)